--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -705,7 +705,7 @@ image::ScheduleUiMonthStep3.png[]
 
 [NOTE]
 ====
-- The event list will be empty and not display anything if there is no event on the specified date.
+- The event list will be empty and not display anything if there is no event on the specified month, year.
 - The command is designed to give an overview of the user's schedule and is based on the event's Start and End date.
 It does not take into account of the event's set date and time.
 (To have a more detailed view of the event, simply double click on that event).
@@ -731,7 +731,7 @@ Format: `generate_schedule`
 `generate_schedule` once all events are confirmed.
 ====
 
-**To display the entire schedule:**
+**Example: To display the entire schedule:**
 
 **Step 1**.  Either type `generate_schedule` into the command box or click on the generate schedule button to display the entire schedule.
 
