--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -522,8 +522,14 @@ Adds a reminder to the reminder list when you enters a new reminder. Key informa
 
 *Format:* `reminder add d/DATE m/MESSAGE`
 
+****
+* Your reminders are sorted based on how close they are to their respective deadline.
+* The closer it is to the deadline, the higher position it takes in the reminder list.
+* Therefore, you will be able to quickly notice the most urgent tasks.
+****
+
 [NOTE]
-You have to ensure that the date of the deadline in must be in the future before the end of next year. In other words, MoneyGoWhere will accept dates starting from today until the end of next year as deadlines.
+You have to ensure that the date of the deadline must be in the future before the end of next year. In other words, MoneyGoWhere will accept dates starting from today until the end of next year as deadlines.
 
 *Examples:*
 
@@ -715,7 +721,7 @@ The most recent undo command is reversed.
 
 //tag::clear[]
 === Clear all data : `clear`
-Clears all entries from the application. +
+You can clear all your saved data from this application using this command. +
 *Format:* `clear`
 
 [NOTE]
