--- a/docs/team/minpyaemoe.adoc
+++ b/docs/team/minpyaemoe.adoc
@@ -54,13 +54,13 @@ https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=minpyaemoe&sort=group
 
 ** Documentation
 *** Created use cases and updated them into Developer Guide. (Pull Requests: https://github.com/AY1920S1-CS2103T-F13-3/main/pull/40[#40])
-*** Updated the existing Developer Guide of Address book for MoneyGoWhere application. (Pull Requests: https://github.com/AY1920S1-CS2103T-F13-3/main/pull/95[#95])
+*** Updated the existing Developer Guide of Address book for MoneyGoWhere application. (Pull Requests: https://github.com/AY1920S1-CS2103T-F13-3/main/pull/95[#95], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/269[#269])
 
 ** Testing
 *** Handled unit and integration testing of reminder feature. (Pull Requests: https://github.com/AY1920S1-CS2103T-F13-3/main/pull/83[#83], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/113[#113], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/139[#139])
 
 ** Debugging
-*** Contributed in implementing solutions for flaws and bugs found in the application. (Pull Requests: https://github.com/AY1920S1-CS2103T-F13-3/main/pull/203[#203], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/219[#219])
+*** Contributed in implementing solutions for flaws and bugs found in the application. (Pull Requests: https://github.com/AY1920S1-CS2103T-F13-3/main/pull/203[#203], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/219[#219] , https://github.com/AY1920S1-CS2103T-F13-3/main/pull/251[#251])
 
 ** Community
 *** Reviewed Pull Requests from teammates (with non-trivial review comments). (Pull Requests: https://github.com/AY1920S1-CS2103T-F13-3/main/pull/28[#28], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/82[#82], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/84[#84], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/96[#96], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/97[#97], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/112[#112], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/134[#134], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/136[#136], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/137[#137], https://github.com/AY1920S1-CS2103T-F13-3/main/pull/138[#138])
